--- a/solution/Prueba.html
+++ b/solution/Prueba.html
@@ -42,8 +42,8 @@
       let p1  = new cv.Point(0, 0);
       let p2  = new cv.Point(150, 150);
       cv.line(mat, p1, p2, [0, 255, 0, 255], 1)
-      //cv.imshow('canvasOutput', mat);
-      mat.delete();
+      cv.imshow('canvasOutput', mat);
+      //mat.delete();
     };
 
     var Module = {
