--- a/Prueba.html
+++ b/Prueba.html
@@ -6,7 +6,9 @@
 <body>
   <input type="file" id="fileInput" accept="image/*" />
   <canvas id="canvas"></canvas>
+  <canvas id="canvasOutput"></canvas>
 
+  <script async src="https://docs.opencv.org/3.4.0/opencv.js" type="text/javascript"></script>
   <script src="Prueba.js">
   </script>
 
