--- a/Prueba.html
+++ b/Prueba.html
@@ -7,10 +7,12 @@
   <input type="file" id="fileInput" accept="image/*" />
   <canvas id="canvas"></canvas>
   <canvas id="canvasOutput"></canvas>
+  <button id="StartGen" role="button"> Generar</button>
+
+
 
   <script async src="https://docs.opencv.org/3.4.0/opencv.js" type="text/javascript"></script>
-  <script src="Prueba.js">
-  </script>
+  <script src="Prueba.js"></script>
 
   <script>
     // Escuchar el evento change del input de archivo
