Agregacion tiempo a la interfaz

--- a/Configuration.html
+++ b/Configuration.html
@@ -22,6 +22,9 @@
       
     </div>
     <button id="backbutton" onclick="back()">Volver a la configuracion</button>
+
+
+    <p id="finalTime"> Tiempo final= 00:00 </p> 
   </div>
     
     <div id="configurationContainer">
