--- a/Welcome.html
+++ b/Welcome.html
@@ -1,3 +1,8 @@
+<!-- PY2 - Vectorizacion de imagenes
+Kevin Jiménez Molinares 2021475925
+Sebastián López Herrera 2019053591
+Josafat Badilla Rodríguez 2020257662 -->
+
 <!DOCTYPE html>
 <html>
 <head>
