--- a/Welcome.html
+++ b/Welcome.html
@@ -12,7 +12,7 @@ Josafat Badilla Rodríguez 2020257662 -->
 <body>
   <div class="container">
     <h1>ALGORITMOS GENÉTEICOS</h1>
-    <a href="Configuration.html" class="button">Configuración inicial</a>
+    <a href="Genetic.html" class="button">Configuración inicial</a>
     
   </div>
   <script async src="https://docs.opencv.org/3.4.0/opencv.js" type="text/javascript"></script>
