--- a/Genetic.html
+++ b/Genetic.html
@@ -9,7 +9,7 @@ Josafat Badilla Rodríguez 2020257662 -->
 <html>
   <head>
     <meta charset="utf-8">
-  <link rel="stylesheet" href="ConfigurationStyle.css">
+  <link rel="stylesheet" href="GeneticStyle.css">
   
   </head>
 <body>
@@ -76,6 +76,6 @@ Josafat Badilla Rodríguez 2020257662 -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script async src="https://docs.opencv.org/3.4.0/opencv.js" type="text/javascript"></script>
 </body>
-<script type="text/javascript" src="Prueba.js"> </script>
+<script type="text/javascript" src="GeneticScript.js"> </script>
 
 </html>
